--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "/prototype" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
-github_username:  
+github_username: dmcwo/prototype
 
 permalink: /:collection/:title
         
